# cv_adapter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
app/agents/: cv_reader.py  cv_validator.py
app/agents/outputs/: cv_reader_output.py  cv_validator_output.py
app/http/: responses.py
app/models/: config.py  schemas.py
app/routers/: adaptation_router.py  cv_router.py
app/services/: cv_adaptation_service.py  cv_validation_service.py  file_service.py  redis_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CVUpload.tsx  CVValidator.tsx  JobDescription.tsx  StatsCharts.tsx
frontend/src/pages/: home.tsx
frontend/src/services/: api.ts
